Fly.io is sh*t, it doesn't work

--- a/fly.toml
+++ b/fly.toml
@@ -26,3 +26,7 @@ console_command = "/code/manage.py shell"
 [[statics]]
   guest_path = "/code/static"
   url_prefix = "/static/"
+
+[mounts]
+  source="sqlite"
+  destination="/data"
